Quitadas páginas de la carpeta por problemas de compatibilidad con el código + Modificación al favicon de Yotsuba.

--- a/Bibliografía.html
+++ b/Bibliografía.html
@@ -15,7 +15,7 @@
         <div class="bibliografia"> <a href="Bibliografía.html" target="_blank">Bibliografía</a></div>
         <div class="principales"> <a href="Principales.html" target="_blank">Canciones Principales</a></div>
         <div class="TQQ"> <a href="TQQ.html" target="_blank">Página Principal</a></div>
-        <div class="trayectoria"> <a href="Trayectoria.html" target="_blank">Trayectoria Musical</a></div>
+        <div class="trayectoria"> <a href="TrayectoriaMusical.html" target="_blank">Trayectoria Musical</a></div>
         <div class="redes"> <a href="RRSS.html" target="_blank">Redes Sociales</a></div>
     </div>
 
