Finalizado el sitio web.

--- a/Bibliografía.html
+++ b/Bibliografía.html
@@ -15,10 +15,11 @@
         <div class="bibliografia"> <a href="Bibliografía.html" target="_blank">Bibliografía</a></div>
         <div class="principales"> <a href="Principales.html" target="_blank">Canciones Principales</a></div>
         <div class="TQQ"> <a href="TQQ.html" target="_blank">Página Principal</a></div>
-        <div class="trayectoria"> <a href="TrayectoriaMusical.html" target="_blank">Trayectoria Musical</a></div>
+        <div class="trayectoria"> <a href="Trayectoria.html" target="_blank">Trayectoria</a></div>
         <div class="redes"> <a href="RRSS.html" target="_blank">Redes Sociales</a></div>
     </div>
 
+                                            <!--CUERPO-->
 
     <div class="titulo">
         <h1>BIBLIOGRAFÍA</h1>
@@ -46,6 +47,30 @@
                         <td><a href="https://jpop.fandom.com/wiki/Nakanoke_no_Itsutsugo" target="_blank">Wikipedia</a></td>
                         <td>Información acerca del grupo.</td>
                     </tr>
+
+                    <tr>
+                        <td style="color: rgb(236, 215, 25);"><a href="https://es.wikipedia.org/wiki/Kana_Hanazawa#Álbumes" target="_blank">Wikipedia</a></td>
+                        <td style="color: rgb(236, 215, 25);">Información acerca de la primera quintilliza.</td>
+                    </tr>
+
+                    <tr>
+                        <td style="color: rgba(148, 21, 116, 0.897);"><a href="https://en.wikipedia.org/wiki/Ayana_Taketatsu" target="_blank">Wikipedia</a></td>
+                        <td style="color: rgba(148, 21, 116, 0.897);">Información acerca de la segunda quintilliza.</td>
+                    </tr>
+
+                    <tr>
+                        <td style="color: rgb(52, 79, 197);"><a href="https://es.wikipedia.org/wiki/Miku_Itō" target="_blank">Wikipedia</a></td>
+                        <td style="color: rgb(52, 79, 197);">Información acerca de la tercera quintilliza.</td>
+                    </tr>
+
+                    <tr>
+                        <td style="color: rgb(40, 184, 71);"><a href="https://es.wikipedia.org/wiki/Ayane_Sakura" target="_blank">Wikipedia</a></td>
+                        <td style="color: rgb(40, 184, 71);">Información acerca de la cuarta quintilliza.</td>
+                    </tr>
+
+                    <tr>
+                        <td style="color: rgb(184, 40, 40);"><a href="https://es.wikipedia.org/wiki/Inori_Minase" target="_blank">Wikipedia</a></td>
+                        <td style="color: rgb(184, 40, 40);">Información acerca de la quinta quintilliza</td>
 
                     <tr>
                         <td><a href="https://www.w3schools.com" target="_blank">W3Schools</a></td>
@@ -90,6 +115,16 @@
                     <tr>
                         <td><a href="https://open.spotify.com/intl-es" target="_blank">Spotify</a></td>
                         <td>Me ayudó a insertar las playlists y canciones.</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="https://saveinsta.cc/es/youtube-to-mp4">SaveInsta</a></td>
+                        <td>Me ayudó a descargar tanto el vídeo de fondo de la página principal como las 2 canciones de la página de canciones principales.</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="https://codedamn.com/news/frontend/how-to-put-image-and-text-side-by-side-in-html">CodeDamn</a></td>
+                        <td>Resolución de dudas.</td>
                     </tr>
 
                 </tbody>
