Añadidos cambios de última hora. Problemas con los links.

--- a/Bibliografía.html
+++ b/Bibliografía.html
@@ -118,12 +118,12 @@
                     </tr>
 
                     <tr>
-                        <td><a href="https://saveinsta.cc/es/youtube-to-mp4">SaveInsta</a></td>
+                        <td><a href="https://saveinsta.cc/es/youtube-to-mp4" target="_blank">SaveInsta</a></td>
                         <td>Me ayudó a descargar tanto el vídeo de fondo de la página principal como las 2 canciones de la página de canciones principales.</td>
                     </tr>
 
                     <tr>
-                        <td><a href="https://codedamn.com/news/frontend/how-to-put-image-and-text-side-by-side-in-html">CodeDamn</a></td>
+                        <td><a href="https://codedamn.com/news/frontend/how-to-put-image-and-text-side-by-side-in-html" target="_blank">CodeDamn</a></td>
                         <td>Resolución de dudas.</td>
                     </tr>
 
