--- a/Principales.html
+++ b/Principales.html
@@ -27,7 +27,7 @@
                                             
                 <div class="texto">
                     <p>
-                        Las 5 chicas que vimos en <a href="Trayectoria.html">esta página</a> formaron el grupo Nakanoke no Itsutsugo con el fin 
+                        Las 5 chicas que vimos en <a href="Trayectoria.html" target="_blank">esta página</a> formaron el grupo Nakanoke no Itsutsugo con el fin 
                         de darle las voces de los personajes tanto a los endings, como a los openings tanto de las películas como del propio anime.
                         Ambos "ending" como "opening" se refieren a las canciones/videos que representan tanto el inicio como el final del capítulo
                         o película. 
