--- a/RRSS.html
+++ b/RRSS.html
@@ -37,11 +37,11 @@
                     <tbody>
                         <tr>
                             <td>
-                                <a href="https://www.instagram.com/hanazawa_kana.official/profilecard/?igsh=NzVhOG5iYTA1OTI0">Hanazawa Kana</a>
+                                <a href="https://www.instagram.com/hanazawa_kana.official/profilecard/?igsh=NzVhOG5iYTA1OTI0" target="_blank">Hanazawa Kana</a>
                             </td>
 
                             <td>
-                                <a href="https://x.com/hanazawa_staff?s=11">Hanazawa Kana</a>
+                                <a href="https://x.com/hanazawa_staff?s=11" target="_blank">Hanazawa Kana</a>
                             </td>
 
                             <td>
@@ -53,11 +53,11 @@
                         <tr>
 
                             <td>
-                                <a href="https://www.instagram.com/ayachi_official/?hl=es">Taketatsu Ayana</a>
+                                <a href="https://www.instagram.com/ayachi_official/?hl=es" target="_blank">Taketatsu Ayana</a>
                             </td>
 
                             <td>
-                                <a href="https://x.com/ayana_take?s=11">Taketatsu Ayana</a>
+                                <a href="https://x.com/ayana_take?s=11" target="_blank">Taketatsu Ayana</a>
                             </td>
 
                             <td>
@@ -70,11 +70,11 @@
                         <tr>
 
                             <td>
-                                <a href="https://www.instagram.com/itomiku_official/profilecard/?igsh=NmIwcGZzY2UwN2dm">Ito Miku</a>
+                                <a href="https://www.instagram.com/itomiku_official/profilecard/?igsh=NmIwcGZzY2UwN2dm" target="_blank">Ito Miku</a>
                             </td>
 
                             <td>
-                                <a href="https://x.com/infoitomiku?s=11">Ito Miku</a>
+                                <a href="https://x.com/infoitomiku?s=11" target="_blank">Ito Miku</a>
                             </td>
 
                             <td>
@@ -87,7 +87,7 @@
                         <tr>
 
                             <td>
-                                <a href="https://www.instagram.com/ayane.sakura.mg/profilecard/?igsh=ZzNzcGFlMWk5NmJr">Sakura Ayane</a>
+                                <a href="https://www.instagram.com/ayane.sakura.mg/profilecard/?igsh=ZzNzcGFlMWk5NmJr" target="_blank">Sakura Ayane</a>
                             </td>
 
                             <td>
@@ -104,11 +104,11 @@
                         <tr>
                                 
                             <td>
-                                <a href="https://www.instagram.com/inoriminase_info/?hl=es">Inori Minase</a>
+                                <a href="https://www.instagram.com/inoriminase_info/?hl=es" target="_blank">Inori Minase</a>
                             </td>
 
                             <td>
-                                <a href="https://x.com/inoriminase?s=11">Inori Minase</a>
+                                <a href="https://x.com/inoriminase?s=11" target="_blank">Inori Minase</a>
                             </td>
 
 
